--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "^1.6.1",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.15.2",
+    "@nuxtjs/sitemap": "^7.0.2",
     "@tiptap/extension-horizontal-rule": "^2.9.1",
     "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
@@ -22,8 +23,10 @@
     "@tiptap/vue-3": "^2.9.1",
     "@types/ramda": "^0.30.0",
     "dompurify": "^3.2.3",
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
     "jsdom": "^25.0.1",
+    "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
     "marked": "^15.0.5",
     "nuxt": "^3.11.2",
@@ -38,6 +41,7 @@
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/stylelint-module": "^5.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "@types/lodash-es": "^4.17.12",
     "@vueuse/nuxt": "^10.9.0",
     "ramda": "^0.30.0",
     "vite-plugin-eslint2": "^4.4.0",
