--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "https://frontendjobs.app/:path*",
+      "source": "https://www.frontendjobs.app/:path*",
       "destination": "https://www.frontendjobs.app/:path*",
       "permanent": true
     }
